# trustk

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: figure_governance.md  github_release.md  pypi_release.md  research_framework.md  software_usage.md
src/trustk/: __init__.py  api.py
src/trustk/analytical/: __init__.py  theis.py
src/trustk/assimilation/: __init__.py  spatial.py
src/trustk/data/: __init__.py  extract_pumping.py  extract_slug.py  pumping_inventory.py  usgs_inventory.py
src/trustk/diagnostics/: __init__.py  fit_quality.py
src/trustk/dimensionless/: __init__.py  registry.py  settings.py
src/trustk/experiments/: __init__.py  run_benchmark_slug.py  run_benchmark_theis.py  run_bouwer_rice_sensitivity.py  run_conditional_prior_analysis.py  run_dimensionless_registry.py  run_engineering_baseline.py  run_fit_quality_qc.py  run_joint_storage_manuscript_figures.py  run_joint_storage_reanalysis.py  run_numerical_verification.py  (+5 more)
tests/: test_conditional_prior_analysis.py  test_dimensionless_registry.py  test_engineering_baseline.py  test_field_extractors.py  test_field_style_validation.py  test_fit_quality_qc.py  test_fv_solver.py  test_joint_storage_reanalysis.py  test_lovelock_validation.py  test_mesh_and_theis.py  test_numerical_verification.py  test_public_api.py  test_random_field_mapping.py  test_simulation_settings.py  test_slug_benchmark.py  test_slug_solver.py  test_spatial_assimilation.py  test_support_targets_residuals.py  test_synthetic_pilot.py  test_theis_benchmark.py  test_usgs_inventory.py
(+26 files in other folders)
